# ConsoleBotAssistant

./: Dockerfile  README.md  assistant.py  main.py  pyproject.toml  record.py
