[tool.poetry]
name = "bot-assistant"
version = "0.1.0"
description = ""
authors = ["Alona7777 <abogolepova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
rich = "^13.7.0"
prompt-toolkit = "3.0.36"
questionary = "2.0.1"
termcolor = "^2.4.0"
requests = "^2.31.0"
googletrans = "4.0.0-rc1"


[build-system]
requires = ["poetry-core=1.7.1"]
build-backend = "poetry.core.masonry.api"
